# SmartTraffic

./: .gitignore  README.md  countdown  deepsort_wrapper.py  docker_build.sh  install.sh  make_retest.sh  manage.py  requirements.txt  trafficnet.pt  wrapper.py
C++/: CMakeLists.txt
C++/include/: darknet.h
C++/include/lpr/: PlateDetection.h  PlateInfo.h
C++/src/: VID.cpp  VID.h  camcal.cpp  camcal.h  drawROI.cpp  drawROI.h  exception.h  main.cpp  plateRecognition.cpp  plateRecognition.h  prepare.cpp  prepare.h  speedEstimation.cpp  speedEstimation.h  tempCodeRunnerFile.cpp
C++/src/lpr/: CNNRecognizer.cpp  FastDeskew.cpp  FineMapping.cpp  Pipeline.cpp  PlateDetection.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp
cnsoft_backend/: asgi.py  settings.py  urls.py  wsgi.py
cnsoftapp/: apps.py  urls.py  views.py
deep_sort/: cosine_metric_net.py
deep_sort/deep_sort/: track.py  tracker.py
dockerbuild/: Dockerfile  requirements-docker.txt  start_script
models/: dataloader.py  experimental.py  yolo.py
static/: VideoFrame.min.js  violation_mapping.json~develop
templates/: process.html  start.html
tools/: cosine_metric_training.py  dataset.py  get_driveu_crop.py  get_train_txt.py  get_yolov5_driveu.py  get_yolov5_train_txt.py  get_yolov5_ua.py  get_yolov5_visdrone.py  metric.py  test_traffic_light.py  train_traffic_light.py
utils/: general.py
